fix: 🐛 try to fix text selection on ios

--- a/trumpet.css
+++ b/trumpet.css
@@ -85,11 +85,14 @@
   background-color: var(--success);
   border: 2px solid;
   border-color: var(--success);
+  box-sizing: content-box;
   cursor: pointer;
   display: flex;
   height: 50px;
   justify-content: center;
+  padding: 0;
   font-size: 1.5rem;
+  font-family: inherit;
   font-weight: 600;
   box-shadow:
     3px 3px 3px #00000070,
@@ -100,7 +103,6 @@
     box-shadow 60ms ease-in-out,
     transform 60ms ease-in-out;
   width: 50px;
-  min-width: 50px;
   user-select: none;
   -webkit-user-select: none;
   &:active {
